[REFACTORING] calendar empty list

--- a/src/app/styles/vuexy-extended/content.scss
+++ b/src/app/styles/vuexy-extended/content.scss
@@ -81,3 +81,7 @@ a.nav-link:hover {
 .list-group-item:hover {
   background-color: rgba($primary, 0.05) !important;
 }
+
+.fc-list-empty {
+  background-color: inherit !important;
+}
