--- a/src/app/layout/components/footer/footer.component.html
+++ b/src/app/layout/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="content-body">
     <div class="card">
       <div class="card-body align-items-center d-flex justify-content-between">
-        <div class="text-dark">KEP.uz ©</div>
+        <div class="text-dark">{{ coreConfig.app.appTitle }} ©</div>
         <div>
           Powered by
           <a ngbTooltip="Django" href="https://www.djangoproject.com/">
