--- a/src/app/modules/blog/blog.component.html
+++ b/src/app/modules/blog/blog.component.html
@@ -2,7 +2,7 @@
   <div class="content-body">
     <!-- content-header component -->
     <app-content-header [contentHeader]="contentHeader"></app-content-header>
-    <section class="mt-2 pl-lg-1">
+    <section class="mt-2">
       <div class="row">
         <div class="col-lg-9 col-md-6 col-sm-12 order-md-1 order-2">
           <div class="row">
