--- a/src/app/modules/problems/pages/problems/sections/section-header/section-header.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-header/section-header.component.html
@@ -5,12 +5,12 @@
     <div class="card-header">
       <div class="card-title text-white">{{ currentUser?.username || 'Links' | translate }}</div>
 
-      <div class="links">
-        <a routerLink="rating" class="btn btn-primary mr-1" [ngClass.lt-md]="'btn-sm'">
+      <div class="links" [ngClass.lt-md]="'mt-1 d-flex'">
+        <a routerLink="rating" class="btn btn-primary mr-25 mr-mt-1" [ngClass.lt-md]="'btn-sm'">
           <kep-icon name="ranking" class="font-medium-1"></kep-icon>
           {{ 'Rating' | translate }}
         </a>
-        <a routerLink="statistics" class="btn btn-primary mr-1" [ngClass.lt-md]="'btn-sm'">
+        <a routerLink="statistics" class="btn btn-primary mr-25 mr-mt-1" [ngClass.lt-md]="'btn-sm'">
           <kep-icon name="statistics" class="font-medium-1"></kep-icon>
           {{ 'Statistics' | translate }}
         </a>
@@ -39,7 +39,7 @@
       <div class="solved text-center d-flex justify-content-between">
         <div class="text-white" [ngClass.gt-sm]="'font-medium-2'" [ngClass.lt-md]="'font-small-3'">
           <kep-icon type="duotone" class="text-white mr-25" name="ranking"></kep-icon>
-          {{ 'Rank' | translate }}: {{ data.rank }} / {{ data.usersCount }}
+          {{ 'Rank' | translate }}: {{ data.rank }}/{{ data.usersCount }}
         </div>
       </div>
 
