--- a/src/app/modules/problems/pages/statistics/section-profile/section-profile.component.html
+++ b/src/app/modules/problems/pages/statistics/section-profile/section-profile.component.html
@@ -14,14 +14,14 @@
             <i data-feather="check-circle"></i>
             {{ general.solved }}
           </span>
-  
+
           <span ngbTooltip="{{ 'Rating' | translate }}">
             <i [data-feather]="'rating' | iconName" class="ml-50"></i>
             {{ general.rating }}
           </span>
         </div>
       </div>
-  
+
       <div class="font-medium-4 mt-1">
         <span ngbTooltip="{{ 'Rank' | translate }}">
           <i [data-feather]="'users'" class="ml-50"></i>
@@ -40,17 +40,17 @@
       </div>
 
       <div class="languages">
-        <div class="d-flex language justify-content-between" *ngFor="let data of langs">
+        <div *ngFor="let data of langs" class="d-flex language justify-content-between">
           <div class="lang">
             <span class="badge badge-glow badge-{{ data.lang }}">
               {{ data.langFull }}
             </span>
           </div>
-    
+
           <div class="result">
             <strong>x{{ data.solved }}</strong>
           </div>
-        </div>    
+        </div>
       </div>
     </div>
 
@@ -62,7 +62,7 @@
       </div>
 
       <div class="tags">
-        <div class="tag" *ngFor="let tag of tags">
+        <div *ngFor="let tag of tags" class="tag">
           <span class="badge badge-pill badge-primary">
             {{ tag.name }}
           </span>
@@ -79,10 +79,10 @@
       </div>
 
       <div class="topics">
-        <div class="topic d-flex justify-content-between" *ngFor="let topic of topics">
+        <div *ngFor="let topic of topics" class="topic d-flex justify-content-between">
           <div class="d-flex topic-info justify-content-start">
-            <div class="topic-image">
-              <img alt="topic" src="assets/images/problems/topics/topic-{{ topic.topic == 'Tricks' ? 'python-tricks' : topic.topic.toLowerCase() }}.png">
+            <div class="topic-icon">
+              <kep-icon [name]="topic.icon"></kep-icon>
             </div>
             <div class="topic-title">
               {{ topic.topic }}
