[REFACTORING] section-rating-change | challenges profile page

--- a/src/app/modules/challenges/pages/challenges-profile/section-rating-changes/section-rating-changes.component.html
+++ b/src/app/modules/challenges/pages/challenges-profile/section-rating-changes/section-rating-changes.component.html
@@ -1,13 +1,21 @@
 <div class="card">
-  <div class="card-header">
-    <div class="card-title">
-      {{ 'RatingChanges' | translate }}
+  @if (isLoading) {
+    <div [style.height.px]="300">
+      <spinner></spinner>
     </div>
-  </div>
-  <div class="card-body">
-    <apex-chart
-      *ngIf="challengesRatingChangesChart"
-      [options]="challengesRatingChangesChart"
-    ></apex-chart>
-  </div>
+  } @else {
+    <div [@fadeInOnEnter]>
+      <div class="card-header">
+        <div class="card-title">
+          {{ 'RatingChanges' | translate }}
+        </div>
+      </div>
+      <div class="card-body">
+        <apex-chart
+          *ngIf="challengesRatingChangesChart"
+          [options]="challengesRatingChangesChart"
+        ></apex-chart>
+      </div>
+    </div>
+  }
 </div>
