--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-layout></app-layout>
 
-<ngx-loading-bar></ngx-loading-bar>
+<ngx-loading-bar [color]="'var(--primary)'"></ngx-loading-bar>
 
 <toastr-css></toastr-css>
