[REFACTORING] app.component & navbar-kepcoin

--- a/src/app/layout/components/navbar/navbar-kepcoin/navbar-kepcoin.component.html
+++ b/src/app/layout/components/navbar/navbar-kepcoin/navbar-kepcoin.component.html
@@ -31,5 +31,5 @@
   [placement]="'bottom'"
   container="body"
 >
-  <img height="18" src="assets/images/icons/kepcoin.webp"> {{ currentUser.kepcoin }}
+  <img height="18" src="assets/images/icons/kepcoin.webp"> {{ currentUser?.kepcoin }}
 </a>
