--- a/src/app/layout/components/navbar/navbar-kepcoin/navbar-kepcoin.component.scss
+++ b/src/app/layout/components/navbar/navbar-kepcoin/navbar-kepcoin.component.scss
@@ -3,6 +3,7 @@
 ::ng-deep .kepcoin-popover .popover-body {
     padding: 0px !important;
     width: 200px !important;
+    border: none !important;
 }
 
 .text-kepcoin {
