--- a/src/app/modules/challenges/components/challenge-call-card/challenge-call-card.component.scss
+++ b/src/app/modules/challenges/components/challenge-call-card/challenge-call-card.component.scss
@@ -1,13 +1,12 @@
 @import 'styles/kep-imports';
 
 .bg-challenge-call {
-  background-size: 200% auto;
-  background-image: var(--bg-gradient);
   box-shadow: 0 0 10px var(--bg-lighten) !important;
   border: none;
 
   @include dark-layout {
-    box-shadow: 0 0 5px var(--bg-lighten) !important;
+    box-shadow: 0 0 5px mix(black, $primary, 50) !important;
+    background-image: linear-gradient(mix(black, $primary, 40), mix(black, $primary, 60));
   }
 
   ::ng-deep {
