--- a/src/app/modules/challenges/components/challenge-card/challenge-card.component.scss
+++ b/src/app/modules/challenges/components/challenge-card/challenge-card.component.scss
@@ -1,3 +1,5 @@
+@import 'styles/kep-imports';
+
 .challenge-card {
   background: var(--bg-darken);
   box-shadow: 0 0 5px var(--bg-lighten) !important;
@@ -11,7 +13,7 @@
 }
 
 ::ng-deep .dark-layout .challenge-card {
-  background: var(--bg-gradient);
+  background-image: linear-gradient(mix(black, $primary, 40), mix(black, $primary, 60));
 }
 
 td:nth-child(1) {
