--- a/src/app/modules/challenges/components/challenges-user-view/challenges-user-view.component.html
+++ b/src/app/modules/challenges/components/challenges-user-view/challenges-user-view.component.html
@@ -5,11 +5,15 @@
     </span>
     {{ user.username }}
 
-    <span *ngIf="withRating" class="badge badge-light-{{ user.rankTitle | challengesRankColor }}">
+    <span *ngIf="withRating" [class]="{
+      'badge-light-{{ user.rankTitle | challengesRankColor }}': light,
+    }" class="badge badge-{{ user.rankTitle | challengesRankColor }}">
       {{ user.rating }}
     </span>
 
-    <span *ngIf="user?.isBot" class="ml-50 mb-50 badge badge-pill badge-light-{{ user.rankTitle | challengesRankColor }}">
+    <span
+      *ngIf="user?.isBot"
+      class="ml-50 mb-50 badge badge-pill badge-light-{{ user.rankTitle | challengesRankColor }}">
       bot
     </span>
   </div>
