--- a/src/app/modules/challenges/pages/challenges/challenges.component.scss
+++ b/src/app/modules/challenges/pages/challenges/challenges.component.scss
@@ -1,56 +1,10 @@
-@import 'bootstrap/scss/mixins';
-@import 'bootstrap/scss/functions';
-@import 'bootstrap/scss/variables';
-
-.avatar-lg {
-  background: var(--bg-darken);
-  box-shadow: 0 0 10px var(--bg-lighten);
-}
-
-.challenges-page-top {
-  margin-left: -2rem;
-  position: absolute;
-  top: -150px;
-  width: calc(100% + 2rem);
-  z-index: -1;
-  height: 650px;
-  background: var(--bg-gradient);
-
-  @include media-breakpoint-down(lg) {
-    width: calc(100% + 1.2rem);
-  }
-}
+@import 'styles/kep-imports';
 
 .card.in-queue {
-  background-size: 200% auto;
   background-color: var(--bg-primary) !important;
 
   .card-footer {
-    border-top: 1px solid var(--bg-darken);
-  }
-}
-
-.card.top-rating {
-  border: none;
-  box-shadow: 0 0 10px var(--bg-lighten) !important;
-  background: var(--bg-darken);
-
-  .avatar {
-    background: var(--bg-darken) !important;
-    box-shadow: 0 0 5px var(--bg-lighten);
-  }
-
-  thead tr {
-    background-size: 200% auto;
-  }
-
-  td {
-    height: 50px;
-  }
-
-  th, td {
-    border-top: none !important;
-    border-bottom: none !important;
+    border-top: 1px solid mix(black, $primary, 30);
   }
 }
 
