--- a/src/app/modules/challenges/components/challenge-results-card/challenge-results-card.component.scss
+++ b/src/app/modules/challenges/components/challenge-results-card/challenge-results-card.component.scss
@@ -1,7 +1,14 @@
+@import 'styles/kep-imports';
+
+
 .bg-challenge-results {
-  background: var(--bg-gradient);
+  background: linear-gradient(to left, mix(white, $primary, 10), mix(black, $primary, 10));
   border: none;
   border-radius: 10px;
+
+  @include dark-layout {
+    background-image: linear-gradient(mix(black, $primary, 40), mix(black, $primary, 60));
+  }
 
   ::ng-deep {
     .text-blue, .text-primary {
