--- a/src/app/modules/challenges/components/challenge-call-card/challenge-call-card.component.scss
+++ b/src/app/modules/challenges/components/challenge-call-card/challenge-call-card.component.scss
@@ -1,8 +1,9 @@
 @import 'styles/kep-imports';
 
 .bg-challenge-call {
-  box-shadow: 0 0 10px var(--bg-lighten) !important;
   border: none;
+  background: linear-gradient(to left, mix(white, $primary, 10), mix(black, $primary, 10));
+  box-shadow: 0 0 5px mix(black, $primary, 10) !important;
 
   @include dark-layout {
     box-shadow: 0 0 5px mix(black, $primary, 50) !important;
