--- a/src/app/modules/challenges/components/new-challenge-button/new-challenge-button.component.html
+++ b/src/app/modules/challenges/components/new-challenge-button/new-challenge-button.component.html
@@ -1,10 +1,10 @@
 <div class="card btn-new-challenge" ngbTooltip="{{ 'QuickStart' | translate }}">
-  <div class="font-large-1 mb-2 mt-2">
+  <div class="font-large-1 text-white mb-2 mt-2">
     <kep-icon name="challenge-time"></kep-icon>
     {{ timeSeconds }}
   </div>
 
-  <div class="font-large-1 mb-2">
+  <div class="font-large-1 text-white mb-2">
     <kep-icon name="challenge-task"></kep-icon>
     {{ questionsCount }}
   </div>
