--- a/src/app/modules/challenges/pages/challenges/challenges.component.html
+++ b/src/app/modules/challenges/pages/challenges/challenges.component.html
@@ -3,127 +3,26 @@
     <app-content-header [contentHeader]="contentHeader"></app-content-header>
     <section-header></section-header>
 
-    <ul ngbNav #navFilled="ngbNav" class="nav-tabs nav-fill">
-      <li ngbNavItem>
-        <a ngbNavLink>{{ 'Quickstart' | translate }}</a>
+    <ul [(activeId)]="activeTab" ngbNav #navFilled="ngbNav" class="nav-tabs nav-fill">
+      <li [ngbNavItem]="Tab.QuickStart">
+        <a ngbNavLink>{{ 'QuickStart' | translate }}</a>
         <ng-template ngbNavContent>
-          <div [@fadeInOnEnter] class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <new-challenge-button (click)="quickStart(60, 6)" [timeSeconds]="60" [questionsCount]="6"></new-challenge-button>
-            </div>
-
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <new-challenge-button (click)="quickStart(50, 5)" [timeSeconds]="50" [questionsCount]="5"></new-challenge-button>
-            </div>
-
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <new-challenge-button (click)="quickStart(40, 5)" [timeSeconds]="40" [questionsCount]="5"></new-challenge-button>
-            </div>
-
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <new-challenge-button (click)="quickStart(30, 6)" [timeSeconds]="30" [questionsCount]="6"></new-challenge-button>
-            </div>
-          </div>
-
-          <div class="offset-lg-3 col-6">
-            <div class="card-body">
-              <h5 class="mb-2 text-dark">{{ 'Questions' | translate }}</h5>
-              <nouislider
-                [min]="4"
-                [connect]="'lower'"
-                [behaviour]="'tap'"
-                [tooltips]="true"
-                [max]="10"
-                [step]="1"
-                [(ngModel)]="newChallengeCall.questionsCount"
-                [ngClass]="'circle-filled slider-custom'"
-              ></nouislider>
-
-              <h5 class="mb-2 text-dark">{{ 'Time' | translate }}</h5>
-              <nouislider
-                [min]="10"
-                [connect]="'lower'"
-                [behaviour]="'tap'"
-                [tooltips]="true"
-                [max]="90"
-                [step]="10"
-                [(ngModel)]="newChallengeCall.timeSeconds"
-                [ngClass]="'circle-filled slider-custom'"
-              ></nouislider>
-
-              <h5 class="mb-1 text-white">{{ 'Chapters' | translate }}</h5>
-              <ng-select [multiple]="true" [(ngModel)]="selectedChapters">
-                <ng-option *ngFor="let chapter of chapters" [value]="chapter.id">
-                  <span class="badge text-white bg-gradient-chapter-{{ chapter.id }}">
-                    {{ chapter.title }}
-                  </span>
-                </ng-option>
-              </ng-select>
-              <div class="text-center">
-                <button (click)="newChallenge()" class="btn btn-primary btn-sm mt-2">
-                  {{ 'NewChallenge' | translate }}
-                </button>
-              </div>
-            </div>
-          </div>
-
+          <section-quickstart (newChallengeClick)="activeTab = Tab.InQueue">
+          </section-quickstart>
         </ng-template>
       </li>
 
-      <li ngbNavItem>
+      <li [ngbNavItem]="Tab.InQueue">
         <a ngbNavLink>{{ 'InQueue' | translate }}</a>
         <ng-template ngbNavContent>
-          <div class="row" *ngIf="challengeCallsSkeletonVisible">
-            <div class="col-xl-4 col-md-6 col-12" *ngFor="let item of [].constructor(3)">
-              <ngx-skeleton-loader
-                count="2"
-                animation="pulse"
-                appearance="line"
-                [theme]="{height: '185px', background: 'var(--bg-gradient)'}"
-              ></ngx-skeleton-loader>
-            </div>
-          </div>
-
-          <div class="row">
-            <div
-              *ngFor="let challengeCall of challengeCalls"
-              class="col-xl-3 col-md-6 col-12"
-              [@fadeInOnEnter]
-              [@fadeOutOnLeave]>
-              <challenge-call-card
-                [challengeCall]="challengeCall"
-                (delete)="onChallengeCallDelete(challengeCall.id)"
-              ></challenge-call-card>
-            </div>
-          </div>
+          <section-in-queue></section-in-queue>
         </ng-template>
       </li>
 
-      <li ngbNavItem>
+      <li [ngbNavItem]="Tab.Challenges">
         <a ngbNavLink>{{ 'Challenges' | translate }}</a>
         <ng-template ngbNavContent>
-          <div class="item" *ngIf="challengesSkeletonVisible">
-            <ngx-skeleton-loader
-              count="8"
-              animation="pulse"
-              appearance="line"
-              [theme]="{height: '92px', background: 'var(--bg-gradient)'}"
-            ></ngx-skeleton-loader>
-          </div>
-
-          <div class="mb-2">
-            <div *ngFor="let challenge of challenges">
-              <challenge-card [challenge]="challenge"></challenge-card>
-            </div>
-          </div>
-
-          <kep-pagination
-            [(page)]="challengesPage"
-            [pageSize]="7"
-            [collectionSize]="challengesTotal"
-            [maxSize]="5"
-            (pageChange)="updateChallenges()">
-          </kep-pagination>
+          <section-challenges></section-challenges>
         </ng-template>
       </li>
     </ul>
@@ -131,54 +30,12 @@
 
     <div class="row">
       <div class="col-12 col-lg-6">
-        <div class="card">
-          <div class="table-responsive beautiful-table">
-            <table class="table table-striped">
-              <thead>
-              <tr class="text-white bg-gradient-primary">
-                <th>#</th>
-                <th>{{ 'User' | translate }}</th>
-                <th><i data-feather="bar-chart"></i></th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr
-                *ngFor="let challengesRating of challengesRating; index as i">
-                <td class="text-dark">
-                  {{ i+1 }}
-                </td>
-                <td>
-                  <challenges-user-view [user]="challengesRating"></challenges-user-view>
-                </td>
-                <td>
-                      <span class="badge badge-light-{{ challengesRating.rankTitle | challengesRankColor }}">
-                        {{ challengesRating.rating }}
-                      </span>
-                </td>
-              </tr>
-              </tbody>
-            </table>
-
-            <div class="item" *ngIf="challengesRatingSkeletonVisible">
-              <ngx-skeleton-loader
-                count="10"
-                animation="pulse"
-                appearance="line"
-                [theme]="{height: '40px', background: 'var(--bg-primary)'}"
-              ></ngx-skeleton-loader>
-            </div>
-          </div>
-
-          <div class="card-footer text-center">
-            <a routerLink="rating" class="btn btn-sm btn-primary round">
-              {{ 'OverallRating' | translate }}
-            </a>
-          </div>
-        </div>
+        <section-top-rating></section-top-rating>
+      </div>
+      <div class="col-12 col-lg-6">
+        <section-arenas></section-arenas>
       </div>
     </div>
   </div>
 </div>
 
-<nouslider-css></nouslider-css>
-<ng-select-css></ng-select-css>
