--- a/src/app/modules/challenges/pages/challenges/sections/section-header/section-header.component.html
+++ b/src/app/modules/challenges/pages/challenges/sections/section-header/section-header.component.html
@@ -5,7 +5,7 @@
     </div>
   } @else {
     <div class="card-header">
-      <div class="card-title text-white">
+      <div class="card-title text-white" [ngClass.lt-md]="'font-small-4'">
         @if (currentUser) {
           <challenges-user-view [light]="false" [withRating]="true" [user]="challengesRating"></challenges-user-view>
         } @else {
@@ -13,39 +13,43 @@
         }
       </div>
 
-      <div class="links" [ngClass.lt-md]="'mt-1 d-flex'">
+      <div class="links" [ngClass.lt-md]="'d-flex'">
         <a routerLink="rating" class="btn btn-primary mr-25 mr-mt-1" [ngClass.lt-md]="'btn-sm'">
           <kep-icon name="ranking" class="font-medium-1"></kep-icon>
-          {{ 'Rating' | translate }}
+          <span [ngClass.lt-md]="'d-none'">
+            {{ 'Rating' | translate }}
+          </span>
         </a>
         <a routerLink="user-statistics" class="btn btn-primary mr-25 mr-mt-1" [ngClass.lt-md]="'btn-sm'">
           <kep-icon name="statistics" class="font-medium-1"></kep-icon>
-          {{ 'Statistics' | translate }}
+          <span [ngClass.lt-md]="'d-none'">
+            {{ 'Statistics' | translate }}
+          </span>
         </a>
       </div>
     </div>
 
     <div class="card-footer text-center" *ngIf="challengesRating">
       <div class="font-medium-4 d-flex justify-content-between">
-        <div class="text-white">
-          <span class="text-success font-medium-2" ngbTooltip="{{ 'Wins' | translate }}">W</span>
+        <div class="text-white" [ngClass.lt-md]="'font-small-4'" [ngClass.gt-sm]="'font-medium-2'">
+          <span class="text-success" ngbTooltip="{{ 'Wins' | translate }}">W</span>
           {{ challengesRating.wins }}
           <br>
-          <span class="text-success font-medium-2">{{ Math.trunc(100 * challengesRating.wins / challengesRating.all ) }} %</span>
+          <span class="text-success">{{ Math.trunc(100 * challengesRating.wins / challengesRating.all ) }} %</span>
         </div>
 
-        <div class="text-white">
-          <span class="ml-50 text-secondary font-medium-2" ngbTooltip="{{ 'Draws' | translate }}">D</span>
+        <div class="text-white" [ngClass.lt-md]="'font-small-4'" [ngClass.gt-sm]="'font-medium-2'">
+          <span class="ml-50 text-secondary" ngbTooltip="{{ 'Draws' | translate }}">D</span>
           {{ challengesRating.draws }}
           <br>
-          <span class="text-secondary font-medium-2">{{ Math.trunc(100 * challengesRating.draws / challengesRating.all ) }} %</span>
+          <span class="text-secondary">{{ Math.trunc(100 * challengesRating.draws / challengesRating.all ) }} %</span>
         </div>
 
-        <div class="text-white">
-          <span class="ml-50 text-danger font-medium-2" ngbTooltip="{{ 'Losses' | translate }}">L</span>
+        <div class="text-white" [ngClass.lt-md]="'font-small-4'" [ngClass.gt-sm]="'font-medium-2'">
+          <span class="ml-50 text-danger" ngbTooltip="{{ 'Losses' | translate }}">L</span>
           {{ challengesRating.losses }}
           <br>
-          <span class="text-danger font-medium-2">{{ Math.trunc(100 * challengesRating.losses / challengesRating.all ) }} %</span>
+          <span class="text-danger">{{ Math.trunc(100 * challengesRating.losses / challengesRating.all ) }} %</span>
         </div>
       </div>
     </div>
@@ -53,14 +57,14 @@
 </div>
 
 <div class="useful-links row">
-  <div class="col-6">
-    <a class="btn btn-primary" routerLink="/learn/blog/post/69">
+  <div class="col-6 pr-md-1 pr-25">
+    <a class="btn btn-primary" routerLink="/learn/blog/post/69" [ngClass.lt-md]="'font-small-3'">
       {{ 'AboutChallenges' | translate }}
     </a>
   </div>
 
-  <div class="col-6">
-    <a class="btn btn-primary" routerLink="/learn/blog/post/70">
+  <div class="col-6 pl-md-1 pl-25">
+    <a class="btn btn-primary" routerLink="/learn/blog/post/70" [ngClass.lt-md]="'font-small-3'">
       {{ 'AboutQuestionTypes' | translate }}
     </a>
   </div>
