--- a/src/app/modules/home/posts-section/posts-section.component.html
+++ b/src/app/modules/home/posts-section/posts-section.component.html
@@ -5,8 +5,14 @@
 } @else {
   <swiper [config]="postsSwiperConfig" #postsSwiper [height]="500">
     <div class="swiper-slide" *ngFor="let post of lastPosts">
-      <blog-post-card [blog]="post"></blog-post-card>
+      @defer (on viewport) {
+        <blog-post-card [blog]="post"></blog-post-card>
+      } @placeholder {
+        <div [style.height.px]="400">
+          <spinner></spinner>
+        </div>
+      }
     </div>
-<!--    <div class="swiper-pagination"></div>-->
+    <div class="swiper-pagination"></div>
   </swiper>
 }
