[MINOR CHANGES] section arenas & top-rating | challenges

--- a/src/app/modules/challenges/pages/challenges/sections/section-arenas/section-arenas.component.html
+++ b/src/app/modules/challenges/pages/challenges/sections/section-arenas/section-arenas.component.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="card-footer">
-      <a class="btn btn-block btn-yellow" [routerLink]="Resources.Arena">
+      <a class="btn btn-block btn-yellow" [routerLink]="Resources.Arena" [ngClass.lt-md]="'btn-sm'">
         <kep-icon name="arena"></kep-icon>
         {{ 'GoToArena' | translate }}
       </a>
