--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -4,9 +4,9 @@
     <li class="nav-item">
       <a class="navbar-brand" [routerLink]="['/']">
         <span class="brand-logo">
-          <img src="assets/images/logo/logo.webp" alt="brand-logo" height="24" width="36" />
+          <img [src]="defaultCoreConfig.app.appLogoImage" alt="brand-logo" height="24" width="36" />
         </span>
-        <h2 class="brand-text mb-0">{{ coreConfig.app.appName }}</h2>
+        <h2 class="brand-text mb-0">{{ defaultCoreConfig.app.appName }}</h2>
       </a>
     </li>
   </ul>
